gitops/base/frontend-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-user
  namespace: malaby-dev
  labels:
    app: frontend-user
    app.kubernetes.io/part-of: malaby
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-user
  template:
    metadata:
      labels:
        app: frontend-user
        app.kubernetes.io/part-of: malaby
    spec:
      containers:
        - name: nginx
          image: 192.168.1.8:30082/malaby/frontend-user@sha256:edffd680fdc6dafc9e7c8218fe753a35b12613a27563fdaf7b053c6035664c4e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-user
  namespace: malaby-dev
  labels:
    app: frontend-user
    app.kubernetes.io/part-of: malaby
spec:
  selector:
    app: frontend-user
  ports:
    - name: http
      port: 80
      targetPort: 80
