gitops/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: malaby-dev
  namespace: malaby-dev
  labels:
    app.kubernetes.io/part-of: malaby
spec:
  ingressClassName: traefik
  rules:
    - host: malaby-dev.192.168.1.8.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-user
                port:
                  number: 80
    - host: malaby-admin-dev.192.168.1.8.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-admin
                port:
                  number: 80
